@@ -12,6 +12,7 @@ Patches and other contributions from:
     C. Daniel Chase <dan@cdchase.com>
     Máirín Duffy <duffy@redhat.com>
     John Eckersberg <jeckersb@redhat.com>
+    Scott Henson <shenson@redhat.com>
     Tru Huynh <tru@pasteur.fr>
     Matt Hyclak <hyclak@math.ohiou.edu>
     Pablo Iranzo Gómez <pablo.iranzo@redhat.com>
